// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton renders a large circle initial IconButton 1`] = `
<button
  class="iconButton large circle"
>
  <span>
    icon
  </span>
</button>
`;

exports[`IconButton renders a large circle initial IconButton with ripple 1`] = `
<button
  class="iconButton large circle"
>
  <span>
    icon
  </span>
  <div
    class="ripple useAnimation"
    style="top:100px;left:200px"
  />
</button>
`;

exports[`IconButton renders a large initial IconButton 1`] = `
<button
  class="iconButton large"
>
  <span>
    icon
  </span>
</button>
`;

exports[`IconButton renders a small initial IconButton 1`] = `
<button
  class="iconButton small"
>
  <span>
    icon
  </span>
</button>
`;
